<resources>
    <string name="app_name">King\'s Conquest</string>

    !-- Main Menu Buttons --!
    <string name="NewGame">New Game</string>
    <string name="LoadGame">Load Game</string>
    <string name="Help">Help</string>
    <string name="Credits">Credits</string>
    <string name="Quit">Quit</string>

    !-- Help Menu Objects --!
    <string name="Help_Help" translatable="false">Help</string>
    <string name="HelpText">King\'s Conquest is a game about conquering other villages to make your
                            kingdom the most powerful of the land.</string>

    !-- Credits Menu Objects --!
    <string name="Credits_Thanks">Thanks baymax for his help. Also, thanks bilo for his drawings, they are perfect !</string>
    <string name="Credits_Credits" translatable="false">Credits</string>
    <string name="Vincent" translatable="false">Vincent</string>

    !-- Activity Names --!
    <string name="title_activity_main_game_activty" translatable="false">MainGameActivty</string>

    !-- Hero Types --!
    <string name="Warrior">Warrior</string>
    <string name="Archer">Archer</string>
    <string name="Knight">Knight</string>

    !-- Hero Characteristics --!
    <string name="SelectHero">Select your hero</string>


    !-- Hero Attributes --!
    <string name="InputHeroName">What is your hero\'s name ?</string>


    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="BackArrow" translatable="false">Back Arrow</string>
    <string name="FrontArrow" translatable="false">Front Arrow</string>
    <string name="distribute_attributes">Distribute your hero\'s attribute points</string>
    <string name="Attack">Attack</string>
    <string name="Defence">Defense</string>
    <string name="Speed">Speed</string>
    <string name="CheckMark" translatable="false">CheckMark</string>
    <string name="DistributeAttributesTitle">Attributes Page</string>
    <string name="AttributesPointsLeft" translatable="false">Number of attributes points hero still has</string>
    <string name="speedMinus" translatable="false">speedMinus</string>
    <string name="speedPlus" translatable="false">speedPlus</string>
    <string name="attackPlus" translatable="false">attackPlus</string>
    <string name="attackMinus" translatable="false">attackMinus</string>
    <string name="defencePlus" translatable="false">defencePlus</string>
    <string name="defenceMinus" translatable="false">defenceMinus</string>
    <string name="CurrentAttack" translatable="false">CurrentAttack</string>
    <string name="CurrentDefence" translatable="false">CurrentDefence</string>
    <string name="CurrentSpeed" translatable="false">CurrentSpeed</string>
    <string name="ConfirmHeroCreation">Create hero ?</string>
    <string name="EnterAllAttributes">Please distribute all attributes to your hero</string>
    <string name="EnterNameHero">Please enter a name for your hero</string>
    <string name="HeroCreated">HeroCreated</string>

    <string name="title_activity_game_start" translatable="false">GameStart</string>
    <string name="History" translatable="false">History</string>
    <string name="HistoryBeginning">I still remember my days back in Orilon, my home town. Life was simple for everyone, peasants and royalty alike. I was the son of Gaufridus, king of the Prican empire, and I was the direct heir of all the power. I couldn’t care less about being the heir, the kingdom was doing well with my father and nothing would have changed if I was king.</string>
    <string name="HomeTown" translatable="false">Orilon</string>
    <string name="HistoryBeginning1">Brother</string>
    <string name="HistoryBeginning2">I should wake up...</string>
    <string name="HistoryBeginning3">Even though I was put in exile from my home city, I still have some friends who believed me when I said I didn’t kill the king. So, they followed me, giving me their word that they would fight and die for me. They are my new family. We are now heading to this city, I can’t quite remember the name… Its something like…</string>
    <string name="ChooseStartingCity">Choose Startig City</string>
    <string name="City1" translatable="false">Frostford</string>
    <string name="City2" translatable="false">Bredon</string>
    <string name="City3" translatable="false">Worcester</string>
    <string name="City4" translatable="false">Old Ashton</string>
    <string name="CityRemember">"Oh yes I remember now, it was the city of "</string>
    <string name="DescCity1">It is situated in the north of the continent. They say that it never stops snowing, but you know, they are rumors. Well, in any case, I really do hope they are rumors, because I can already feel my toes freezing. We finally get to the city. I can feel it right as I left the caravan; the wind is so cold, there is snow everywhere. How do people live here? Maybe those conditions are what makes north warriors the best of the country.</string>
    <string name="DescCity2">It is situated to the east of the continent. If only father could see it, he would’ve loved hunting in these forests. The roads are full of trees and lakes, it’s beautiful. I recall my teacher saying that the archers from Bredon could hide in the trees and rain arrows on the enemy. That would explain why father told me that the city of Bredon could not be conquered. Right as I step outside of the caravan, I can feel the warm wind on my face. This really seems like a nice stop.</string>
    <string name="DescCity3">It is situated in the south of the continent. From my souvenirs, this city is in the heart of the province of horse. Knights whose tales are described in children books often come from this place. Maybe I’ll meet my childhood hero Arkadatan. Who knows. As I step outside the caravan, I feel this hot wind on my face. How can anyone live like this?</string>
    <string name="DescCity4">It is situated to the west of the continent. That’s the city where teachers and sages come from. I saw it as we were on the roads, it was breath taking. Never have I seen such beautiful houses. It is said that its exactly the beauty of the city that inspires sages and explains why this city is so advanced in technology. As I step outside, I see soldiers patrolling the streets, watching the citizens moves. Wonder if any of them mind their presence? Who knows.</string>
    <string name="Village1" translatable="false">Millstone</string>
    <string name="Village2" translatable="false">Crasmere</string>
    <string name="Village3" translatable="false">Solaris</string>
    <string name="Village4" translatable="false">Lakeshore</string>
    <string name="historyStranger">Few moments passed and a stranger comes by. His face was painted with terror. He asked us to please go take a look at the village of</string>
    <string name="HistoryStranger1">. He said it was invaded by barbarians and they took control of the village. He cannot defeat them all by himself but he is sure that my men and I can. I’m thinking that maybe if we come and help, the villagers will supply us with food, and who knows, a place to stay. However, I need to ask my men first if they are willing to die for a stranger. The look on their eyes tells me that they’ve already agreed to it and so I tell the stranger that we agree. He just needs to tell us the directions.</string>
    <string name="HistoryStranger2">And thus, we’re back on the road. It’s been a while I’ve been in a fight, and to be honest, I’m a bit scared. We can see the village from here. Time is up. We now fight.</string>


</resources>
