<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.gok.luisanillo.kingsconquest.MainActivity">

    <ImageButton
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="320dp"
        android:layout_weight="1"
        android:background="#0000"
        android:contentDescription="@string/NewGame"
        android:onClick="newGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newgame" />

    <ImageButton
        android:id="@+id/loadgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="#0000"
        android:contentDescription="@string/LoadGame"
        android:onClick="loadGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newgame"
        app:srcCompat="@drawable/loadgame" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="#0000"
        android:contentDescription="@string/Help"
        android:onClick="help"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help" />

    <ImageButton
        android:id="@+id/credits"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="#0000"
        android:contentDescription="@string/Credits"
        android:onClick="credits"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/credits"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/quit"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="#0000"
        android:contentDescription="@string/Quit"
        android:onClick="quit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quit" />

</android.support.constraint.ConstraintLayout>
