<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#0099cc"
    tools:context="com.gok.luisanillo.kingsconquest.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="569dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/Background"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background" />

    <RelativeLayout
        android:id="@+id/relMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/Background"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/midlayer"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_above="@+id/bottomlayer"
                android:layout_alignEnd="@+id/bottomlayer"
                android:layout_alignRight="@+id/bottomlayer"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/NewGame"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@string/Background"
                    android:contentDescription="@string/NewGame"
                    app:srcCompat="@drawable/newgame"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomlayer"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="37dp"
                android:contentDescription="@string/LoadGame"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton17"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@string/Background"
                    android:contentDescription="@string/LoadGame"
                    app:srcCompat="@drawable/loadgame" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toplayer"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/Help"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@string/Background"
                    android:contentDescription="@string/Help"
                    app:srcCompat="@drawable/help" />

                <ImageButton
                    android:id="@+id/imageButton19"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@string/Background"
                    android:contentDescription="@string/Credits"
                    app:srcCompat="@drawable/credits" />

                <ImageButton
                    android:id="@+id/imageButton20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@string/Background"
                    android:contentDescription="@string/Quit"
                    app:srcCompat="@drawable/quit" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
